@@ -1,6 +1,9 @@
 0.4.0
     - Don't forward PING/PONG server messages
-    - Generate various server replies without contacting the server
+    - Generate various server replies without contacting the server.
+      As a consequence, it should use less traffic and be snappier,
+      especially when many/large/busy channels are involved.
+    - Added away_poll config option
 
 0.3.3 Sun Sep 28 04:21:50 GMT 2008
     - Fixed crash on client disconnect
